updated at: 2023-02-06 07:29, オリジナル3Dモデル【Sttila】 - オトギバナシ - BOOTH

--- a/VRChat/29/1240329.html
+++ b/VRChat/29/1240329.html
@@ -7,7 +7,7 @@
       オリジナル3Dモデル【Sttila】 - オトギバナシ - BOOTH
     </title>
     <meta name="description" content=
-    "オリジナル3D武器モデル「Sttila」 ――製品概要―― VRChat等のアプリケーション、ゲームで使用することを想定した3D武器モデルです。 シェイプキーで形状を変えることができ、剣、ハンマー、杖、槍、盾それぞれ２種類、合計１０種類への形状変化が可能です。 △ポリゴン数:１２２０ ※画像に写っているアバターは付属しません。">
+    "オリジナル3D武器モデル「Sttila」 ――注意事項―― このモデルは2018年に作成されたものです。 動作は保証いたしません。またサポート外とさせていただきます。 ――製品概要―― VRChat等のアプリケーション、ゲームで使用することを想定した3D武器モデルです。 シェイプキーで形状を変えることができ、剣、ハンマー、杖、槍、盾それぞれ２種類、合計１０種類への形状変化が可能です。 △ポリゴン数:１２２０ ※画像に写っているアバターは付属しません。 ――製品内容―― ・unitypackage ・fbx ・readme ――利用規約――">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1240329">
@@ -16,14 +16,14 @@
     <meta name="twitter:title" content=
     "オリジナル3Dモデル【Sttila】 - オトギバナシ - BOOTH">
     <meta name="twitter:description" content=
-    "オリジナル3D武器モデル「Sttila」 ――製品概要―― VRChat等のアプリケーション、ゲームで使用することを想定した3D武器モデルです。 シェイプキーで形状を変えることができ、剣、ハンマー、杖、槍、盾それぞれ２種類、合計１０種類への形状変化が可能です。 △ポリゴン数:１２２０ ※画像に写っているアバターは付属しません。">
+    "オリジナル3D武器モデル「Sttila」 ――注意事項―― このモデルは2018年に作成されたものです。 動作は保証いたしません。またサポート外とさせていただきます。 ――製品概要―― VRChat等のアプリケーション、ゲームで使用することを想定した3D武器モデルです。 シェイプキーで形状を変えることができ、剣、ハンマー、杖、槍、盾それぞれ２種類、合計１０種類への形状変化が可能です。 △ポリゴン数:１２２０ ※画像に写っているアバターは付属しません。 ――製品内容―― ・unitypackage ・fbx ・readme ――利用規約――">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/dc16eb3f-c515-498f-8a3c-f8e7c46beb2d/i/1240329/8d2dbbb9-f4da-4aa0-9f47-799cb831a625_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "オリジナル3Dモデル【Sttila】 - オトギバナシ - BOOTH">
     <meta property="og:description" content=
-    "オリジナル3D武器モデル「Sttila」 ――製品概要―― VRChat等のアプリケーション、ゲームで使用することを想定した3D武器モデルです。 シェイプキーで形状を変えることができ、剣、ハンマー、杖、槍、盾それぞれ２種類、合計１０種類への形状変化が可能です。 △ポリゴン数:１２２０ ※画像に写っているアバターは付属しません。">
+    "オリジナル3D武器モデル「Sttila」 ――注意事項―― このモデルは2018年に作成されたものです。 動作は保証いたしません。またサポート外とさせていただきます。 ――製品概要―― VRChat等のアプリケーション、ゲームで使用することを想定した3D武器モデルです。 シェイプキーで形状を変えることができ、剣、ハンマー、杖、槍、盾それぞれ２種類、合計１０種類への形状変化が可能です。 △ポリゴン数:１２２０ ※画像に写っているアバターは付属しません。 ――製品内容―― ・unitypackage ・fbx ・readme ――利用規約――">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/dc16eb3f-c515-498f-8a3c-f8e7c46beb2d/i/1240329/8d2dbbb9-f4da-4aa0-9f47-799cb831a625_base_resized.jpg">
     <meta property="og:url" content=
@@ -77,9 +77,9 @@
     <script src=
     "https://asset.booth.pm/assets/3300b3d609d626203a57.js" defer=
     "defer" nonce=
-    "MWLfUux1AebzvkVIv7v2dPA3KUzT1rz0ReyW7dHDlbY="></script>
+    "ZmaK0+Uh73U1zZVLVeL6j6TnaCzvm8gzBUNXCjvB1WY="></script>
     <script type="application/ld+json">
-    {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル【Sttila】","description":"オリジナル3D武器モデル「Sttila」\n\n――製品概要――\nVRChat等のアプリケーション、ゲームで使用することを想定した3D武器モデルです。\nシェイプキーで形状を変えることができ、剣、ハンマー、杖、槍、盾それぞれ２種類、合計１０種類への形状変化が可能です。\n\n△ポリゴン数:１２２０\n\n※画像に写っているアバターは付属しません。","url":"https://booth.pm/ja/items/1240329","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1000"},"image":"https://booth.pximg.net/c/620x620/dc16eb3f-c515-498f-8a3c-f8e7c46beb2d/i/1240329/8d2dbbb9-f4da-4aa0-9f47-799cb831a625_base_resized.jpg"}
+    {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル【Sttila】","description":"オリジナル3D武器モデル「Sttila」\n\n――注意事項――\nこのモデルは2018年に作成されたものです。\n動作は保証いたしません。またサポート外とさせていただきます。\n\n――製品概要――\nVRChat等のアプリケーション、ゲームで使用することを想定した3D武器モデルです。\nシェイプキーで形状を変えることができ、剣、ハンマー、杖、槍、盾それぞれ２種類、合計１０種類への形状変化が可能です。\n\n△ポリゴン数:１２２０\n\n※画像に写っているアバターは付属しません。\n\n――製品内容――\n・unitypackage\n・fbx\n・readme\n\n――利用規約――\n本モデルを購入された時点で本利用規約に同意したものとします。\n本利用規約の内容は変更される場合があり、その際は最新のものが適応されます。\n本モデルの著作権は改変の有無を問わず、製作者である御伽栞が所有します。\n\n◆許可事項\n・改変\n・商用コンテンツ、動画への使用\n\n◆禁止事項\n・再配布、販売（改変の有無を問わず禁止します）\n・本モデルを含んだアバターのpublic化\n・本モデルを含んだアバターペデスタルの設置\n・政治、宗教活動、特定個人、団体への中傷を目的とした使用\n\n◆免責事項\n本モデルを利用することで発生したトラブルや損失、損害に対して、\n制作者は一切責任を負いません。\n本モデルのご使用は使用者の責任において行ってください。\n\n本モデルは予告なくアップデート、販売の停止をする場合があります。\n\n当利用規約において翻訳の都合上、他言語との差異が生じた場合\n日本語の利用規約を適用するものといたします。\n\n何かあれば下記の連絡先までご連絡ください。\n\n連絡先\nTwitter：OtogiSiori\nMail：otogisiori@gmail.com","url":"https://booth.pm/ja/items/1240329","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/dc16eb3f-c515-498f-8a3c-f8e7c46beb2d/i/1240329/8d2dbbb9-f4da-4aa0-9f47-799cb831a625_base_resized.jpg"}
     </script>
     <link rel="shortcut icon" type="image/x-icon" href=
     "https://asset.booth.pm/favicon.ico">
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="MWLfUux1AebzvkVIv7v2dPA3KUzT1rz0ReyW7dHDlbY="></script>
+    nonce="ZmaK0+Uh73U1zZVLVeL6j6TnaCzvm8gzBUNXCjvB1WY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -103,7 +103,7 @@
         <div class="market" data-ga-tracking-id=""
         data-product-brand="otogisiori" data-product-category="127"
         data-product-id="1240329" data-product-list="market_show"
-        data-product-price="1000" data-tracking="detail_item" id=
+        data-product-price="500" data-tracking="detail_item" id=
         "items">
           <div class="market"></div>
           <div data-page-type="market" id="js-item"></div>
@@ -197,7 +197,7 @@
                                     </div>
                                     <div class=
                                     "variation-price u-text-right">
-                                      ¥ 1,000
+                                      ¥ 500
                                     </div>
                                   </div>
                                   <div class="variation-cart">
@@ -218,7 +218,7 @@
                                         "off"><button class=
                                         "add-gift flex justify-center box-border items-center cursor-pointer text-text-default shop-theme-text-text border border-border600 shop-theme-border-text bg-white shop-theme-bg-contents w-full mt-8 py-16 text-center"
                                         data-product-id="1240329"
-                                        data-product-price="1000"
+                                        data-product-price="500"
                                         data-product-brand=
                                         "otogisiori"
                                         data-product-category="127"
@@ -244,7 +244,7 @@
                                           <button class=
                                           "add-gift flex justify-center box-border items-center cursor-pointer text-text-default shop-theme-text-text border border-border600 shop-theme-border-text bg-white shop-theme-bg-contents w-full mt-8 py-16 text-center"
                                           data-product-id="1240329"
-                                          data-product-price="1000"
+                                          data-product-price="500"
                                           data-product-brand=
                                           "otogisiori"
                                           data-product-category=
@@ -351,10 +351,30 @@
                         "js-market-item-detail-description description">
                           <p class=
                           "autolink break-words font-noto-sans typography-16 whitespace-pre-line">
-                            オリジナル3D武器モデル「Sttila」 ――製品概要――
+                            オリジナル3D武器モデル「Sttila」 ――注意事項――
+                            このモデルは2018年に作成されたものです。
+                            動作は保証いたしません。またサポート外とさせていただきます。 ――製品概要――
                             VRChat等のアプリケーション、ゲームで使用することを想定した3D武器モデルです。
                             シェイプキーで形状を変えることができ、剣、ハンマー、杖、槍、盾それぞれ２種類、合計１０種類への形状変化が可能です。
                             △ポリゴン数:１２２０ ※画像に写っているアバターは付属しません。
+                            ――製品内容―― ・unitypackage ・fbx ・readme
+                            ――利用規約―― 本モデルを購入された時点で本利用規約に同意したものとします。
+                            本利用規約の内容は変更される場合があり、その際は最新のものが適応されます。
+                            本モデルの著作権は改変の有無を問わず、製作者である御伽栞が所有します。
+                            ◆許可事項 ・改変 ・商用コンテンツ、動画への使用 ◆禁止事項
+                            ・再配布、販売（改変の有無を問わず禁止します）
+                            ・本モデルを含んだアバターのpublic化
+                            ・本モデルを含んだアバターペデスタルの設置
+                            ・政治、宗教活動、特定個人、団体への中傷を目的とした使用 ◆免責事項
+                            本モデルを利用することで発生したトラブルや損失、損害に対して、
+                            制作者は一切責任を負いません。
+                            本モデルのご使用は使用者の責任において行ってください。
+                            本モデルは予告なくアップデート、販売の停止をする場合があります。
+                            当利用規約において翻訳の都合上、他言語との差異が生じた場合
+                            日本語の利用規約を適用するものといたします。
+                            何かあれば下記の連絡先までご連絡ください。 連絡先
+                            Twitter：OtogiSiori
+                            Mail：otogisiori@gmail.com
                           </p>
                         </div>
                       </section>
@@ -368,45 +388,6 @@
                             frameborder="0" allowfullscreen
                             sandbox="allow-scripts allow-same-origin allow-popups allow-presentation">
                             </iframe>
-                          </section>
-                          <section class="shop__text-color">
-                            <h2 class=
-                            "break-words font-bold leading-[32px] !m-0 pb-16 text-[24px] desktop:pb-8">
-                            </h2>
-                            <p class=
-                            "break-words font-noto-sans js-autolink !m-0 !p-0 whitespace-pre-line typography-14 desktop:typography-16">
-                              ――製品内容―― ・unitypackage ・fbx ・readme
-                              ――利用規約――
-                              本モデルを購入された時点で本利用規約に同意したものとします。
-                              本利用規約の内容は変更される場合があり、その際は最新のものが適応されます。
-                              本モデルの著作権は改変の有無を問わず、製作者である御伽栞が所有します。
-                              ◆許可事項 ・改変 ・商用コンテンツ、動画への使用 ◆禁止事項
-                              ・再配布、販売（改変の有無を問わず禁止します）
-                              ・本モデルを含んだアバターのpublic化
-                              ・本モデルを含んだアバターペデスタルの設置
-                              ・政治、宗教活動、特定個人、団体への中傷を目的とした使用 ◆免責事項
-                              本モデルを利用することで発生したトラブルや損失、損害に対して、
-                              制作者は一切責任を負いません。
-                              本モデルのご使用は使用者の責任において行ってください。
-                              本モデルは予告なくアップデート、販売の停止をする場合があります。
-                              当利用規約において翻訳の都合上、他言語との差異が生じた場合
-                              日本語の利用規約を適用するものといたします。
-                              何かあれば下記の連絡先までご連絡ください。 連絡先
-                              Twitter：OtogiSiori
-                              Mail：otogisiori@gmail.com
-                            </p>
-                          </section>
-                          <section class="shop__text-color">
-                            <h2 class=
-                            "break-words font-bold leading-[32px] !m-0 pb-16 text-[24px] desktop:pb-8">
-                              Otogibanasi_Trial_World
-                            </h2>
-                            <p class=
-                            "break-words font-noto-sans js-autolink !m-0 !p-0 whitespace-pre-line typography-14 desktop:typography-16">
-                              3D武器モデル「Sttila」をお試しで使用できるワールドです。
-                              モデルとペデスタルが置いてあります。 気になった方はぜひお試しください。
-                              https://vrchat.net/home/launch?worldId=wrld_cb5b4fe1-895a-4c69-9722-853a229e1836
-                            </p>
                           </section>
                         </section>
                       </div>
@@ -734,7 +715,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;TOKYO FES Feb.2023&quot;,&quot;value&quot;:&quot;tokyofes-feb2023&quot;},{&quot;label&quot;:&quot;#エアブー230212&quot;,&quot;value&quot;:&quot;air-boo-0212&quot;},{&quot;label&quot;:&quot;ワンダーフェスティバル2023[冬]&quot;,&quot;value&quot;:&quot;wonfes2023winter&quot;},{&quot;label&quot;:&quot;COMIC CITY 東京148&quot;,&quot;value&quot;:&quot;comiccity-tokyo148&quot;},{&quot;label&quot;:&quot;関西コミティア66&quot;,&quot;value&quot;:&quot;k-comitia66&quot;},{&quot;label&quot;:&quot;ドールショウ68冬&quot;,&quot;value&quot;:&quot;dollshow68&quot;},{&quot;label&quot;:&quot;こみっくトレジャー41&quot;,&quot;value&quot;:&quot;comic-treasure-41&quot;},{&quot;label&quot;:&quot;#エアブー230108&quot;,&quot;value&quot;:&quot;air-boo-0108&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪123&quot;,&quot;value&quot;:&quot;comiccity-osaka123&quot;},{&quot;label&quot;:&quot;コミックマーケット101&quot;,&quot;value&quot;:&quot;c101&quot;}]"
+    "[{&quot;label&quot;:&quot;COMITIA143&quot;,&quot;value&quot;:&quot;comitia143&quot;},{&quot;label&quot;:&quot;TOKYO FES Feb.2023&quot;,&quot;value&quot;:&quot;tokyofes-feb2023&quot;},{&quot;label&quot;:&quot;#エアブー230212&quot;,&quot;value&quot;:&quot;air-boo-0212&quot;},{&quot;label&quot;:&quot;ワンダーフェスティバル2023[冬]&quot;,&quot;value&quot;:&quot;wonfes2023winter&quot;},{&quot;label&quot;:&quot;COMIC CITY 東京148&quot;,&quot;value&quot;:&quot;comiccity-tokyo148&quot;},{&quot;label&quot;:&quot;関西コミティア66&quot;,&quot;value&quot;:&quot;k-comitia66&quot;},{&quot;label&quot;:&quot;ドールショウ68冬&quot;,&quot;value&quot;:&quot;dollshow68&quot;},{&quot;label&quot;:&quot;こみっくトレジャー41&quot;,&quot;value&quot;:&quot;comic-treasure-41&quot;},{&quot;label&quot;:&quot;#エアブー230108&quot;,&quot;value&quot;:&quot;air-boo-0108&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪123&quot;,&quot;value&quot;:&quot;comiccity-osaka123&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
