updated at: 2023-02-08 00:50, ノートPC - れおの作ったもの倉庫 - BOOTH

--- a/VRChat/81/1187881.html
+++ b/VRChat/81/1187881.html
@@ -4,7 +4,7 @@
     <link href="/manifest.json" rel="manifest">
     <meta charset="utf-8">
     <title>
-      ノートPC - Rubujo - BOOTH
+      ノートPC - れおの作ったもの倉庫 - BOOTH
     </title>
     <meta name="description" content=
     "パソコンのfbxモデルです 画面のuvが同梱してあるので画面を自由に作れます 自作発言、モデルを無改変で再配布以外は何でもしても良いです。 クレジット書いてもらえると嬉しいです">
@@ -13,13 +13,14 @@
     <link rel="canonical" href="https://booth.pm/ja/items/1187881">
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="ノートPC - Rubujo - BOOTH">
+    <meta name="twitter:title" content=
+    "ノートPC - れおの作ったもの倉庫 - BOOTH">
     <meta name="twitter:description" content=
     "パソコンのfbxモデルです 画面のuvが同梱してあるので画面を自由に作れます 自作発言、モデルを無改変で再配布以外は何でもしても良いです。 クレジット書いてもらえると嬉しいです">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/b6966d68-eb85-489d-8c1f-42fadc968b81/i/1187881/20455221-8cbb-4c92-9717-60b99ee7f3fc_base_resized.jpg">
     <meta property="og:type" content="product">
-    <meta property="og:title" content="ノートPC - Rubujo - BOOTH">
+    <meta property="og:title" content="ノートPC - れおの作ったもの倉庫 - BOOTH">
     <meta property="og:description" content=
     "パソコンのfbxモデルです 画面のuvが同梱してあるので画面を自由に作れます 自作発言、モデルを無改変で再配布以外は何でもしても良いです。 クレジット書いてもらえると嬉しいです">
     <meta property="og:image" content=
@@ -75,7 +76,7 @@
     <script src=
     "https://asset.booth.pm/assets/3300b3d609d626203a57.js" defer=
     "defer" nonce=
-    "Z3IdzifjB1ljFvNDz/xi8AlMcyWNAkOVuDx+tfCrnXg="></script>
+    "3iXi9Arnzf2l6/MzKurzF5NILYwMYU/8KQSg5yIA1CE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ノートPC","description":"パソコンのfbxモデルです\n画面のuvが同梱してあるので画面を自由に作れます\n\n\n自作発言、モデルを無改変で再配布以外は何でもしても良いです。\nクレジット書いてもらえると嬉しいです","url":"https://booth.pm/ja/items/1187881","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/b6966d68-eb85-489d-8c1f-42fadc968b81/i/1187881/20455221-8cbb-4c92-9717-60b99ee7f3fc_base_resized.jpg"}
     </script>
@@ -89,7 +90,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Z3IdzifjB1ljFvNDz/xi8AlMcyWNAkOVuDx+tfCrnXg="></script>
+    nonce="3iXi9Arnzf2l6/MzKurzF5NILYwMYU/8KQSg5yIA1CE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -133,11 +134,11 @@
                             href="https://reo777.booth.pm/">
                             <div class=
                             "u-d-flex u-align-items-center">
-                              <img alt="Rubujo" class=
+                              <img alt="れおの作ったもの倉庫" class=
                               "user-avatar at-item-summary" src=
                               "https://booth.pximg.net/c/48x48/users/4350450/icon_image/891a3b04-3dac-4f95-9ffd-7581b69ca159_base_resized.jpg">
                               <div class="u-text-ellipsis">
-                                Rubujo
+                                れおの作ったもの倉庫
                               </div>
                             </div></a>
                           </div>
