updated at: 2023-04-25 16:23, ３Dモデル「魔剣・ショコラエッジ」 - 紅玉堂 - BOOTH

--- a/VRChat/48/1234148.html
+++ b/VRChat/48/1234148.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "JuxxJ70wbvL8bHmF2lGSHIT7p9CFe3qQdM6P7jiW0dw="></script>
+    "itVLFXNZcZ96a4udsYUQRldbrS8wcFh/g7c6Ge7amSU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"３Dモデル「魔剣・ショコラエッジ」","description":"VRCのバレンタインデェなどに使えます畜生（大遅刻\n\nバーチャル世界で召し上がることができるチョコケーキとなります、武器としても使えるのでお砂糖勢のハート奪うのにお使いいただけます。\n\nなお、これを使用したことによるトラブルなど一切責任を負えませんので自己責任でお願いします。","url":"https://booth.pm/ja/items/1234148","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/eac26deb-f8eb-4293-8010-904b0d088bf4/i/1234148/7e6c34cb-09e4-4a87-8b22-7eed30703323_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="JuxxJ70wbvL8bHmF2lGSHIT7p9CFe3qQdM6P7jiW0dw="></script>
+    nonce="itVLFXNZcZ96a4udsYUQRldbrS8wcFh/g7c6Ge7amSU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -180,7 +182,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1234148/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               29
@@ -195,14 +197,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1234148/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               29
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
