updated at: 2023-04-25 16:23, 桜一片ワンピース - マイナルのVRoidブティック - BOOTH

--- a/VRChat/45/1233445.html
+++ b/VRChat/45/1233445.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "LukGRfLV8Qd3UBNkXlVzaUV+Ic0+6NiyVM1HH9o2kQg="></script>
+    "gnbtMz/a40wjBaotmz8r2+VKtI5etJMmMl9dALQZJR8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"桜一片ワンピース","description":"◆桜一片ワンピース 紹介文\n\n春の桜をイメージしたワンピーステクスチャです。\nVRoidStudio ver0.14.0\n◆VRoid hub\nhttps://hub.vroid.com/characters/8095719651101763000/models/2157117482340770344\n衣装の細部や背中など、モデルを回して見れるのでどうぞ！","url":"https://booth.pm/ja/items/1233445","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/a21a27ab-2904-4259-80af-428e002dbca9/i/1233445/d8bf5ff6-c26c-4b3b-bd04-baccb5165a55_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="LukGRfLV8Qd3UBNkXlVzaUV+Ic0+6NiyVM1HH9o2kQg="></script>
+    nonce="gnbtMz/a40wjBaotmz8r2+VKtI5etJMmMl9dALQZJR8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1233445/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               27
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1233445/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               27
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
