updated at: 2023-04-25 16:24, オリジナル3Dモデル『量産型橙』 - 橙号室 - BOOTH

--- a/VRChat/24/1233524.html
+++ b/VRChat/24/1233524.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Rurgl1R4U8E5lNdqZb7+UUkymrtwRdV1MLcQI6IpuEQ="></script>
+    "yObV4msZpIrgtP0CEb9HYp1M4hVc+HvgfYe8B7p26Ho="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル『量産型橙』","description":"１周年記念！量産型橙販売です！尖ったファングッズだと思ってください。\n\n本モデルはVRChatでも使用を想定したモデルです。\n利用規約をご了承の上でご購入ください。\n\n","url":"https://booth.pm/ja/items/1233524","offers":{"priceCurrency":"JPY","@type":"Offer","price":"3000"},"image":"https://booth.pximg.net/c/620x620/5da02e43-a585-4e92-b721-361524d58684/i/1233524/575af621-e3f0-48e4-b27d-6292270ce95d_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Rurgl1R4U8E5lNdqZb7+UUkymrtwRdV1MLcQI6IpuEQ="></script>
+    nonce="yObV4msZpIrgtP0CEb9HYp1M4hVc+HvgfYe8B7p26Ho="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -180,7 +182,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1233524/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               55
@@ -195,14 +197,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1233524/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               55
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
